# doorsys

./: .gitignore  LICENSE  README.md
.github/workflows/: docker-image.yml
api/: .env.fish  Cargo.toml  Dockerfile  entrypoint.sh
api/.sqlx/: query-0e97d24191281e3d7a7dd8853b1a65a7343c17f755b265bff14707309c8a1bb8.json  query-18f2f5921e8d0dd44d32532ce94bb84bba12b298a2d341ba420bb39e18f45f24.json  query-23b681930b28ffc05a0b1605a868f1f2ee7b432fef810b69fbcff59c3086de5d.json  query-312860d7ec92d050ddf34a651c5711d7623eb04b8bbf174d49939fa35f36dfd3.json  query-360d2a7b37c2c037657fded40ab689ffb4e5d8008678cab9e98383e3d66d83b3.json  query-3fc628ea4e92d767f71bd6caea187d774e8f61d1f06fa6bbe8bdb0ea94224f59.json  query-4fbe62ca61ba38184e5295671f8ac841a36851d2f3a3282decc11c96a11f4ee2.json  query-5407fefa91d59682b2d6b1ff085f6272c55e02fcfffc61439e7c61033cc4ac83.json  query-55ffb78cb3f6c9fb4b7aba8d3da339534ab3e59ff3a4be74106ed83c219fa51d.json  query-5721d6a23bd4d3e835c0bb629e7b377775aec67f85b32a9a72fb07f94335b7c4.json  query-595a476faa2d558dfd315ecc6045bf95cb81dfccb74086df35479b4dfc665196.json  query-5f9cbb12f880ef0b1e26955cf8972bc029c778e07db99299c99cb465f8e2e261.json  query-86e0fe90aad65db79c82f8a058d5fbc10a0d4ee4db930dfaa068cda6f0dedbb9.json  query-8d80c061d029a3689ffe95f3622f576cadfe413623becee829b4840130f4ebf5.json  query-937b6414cbcc7cd01e1fde06386bbfbb36914ba86185a2df362ce3c18824f842.json  query-95d7df4e2b70a8e1d19a34cf928e3605a24411750284f2e1684f53d84eeaeb2e.json  query-9604d7bd53755e0acfbc5c6cf3eeeb86e855c4bd4099ea26b9d0dfbdc915a63a.json  query-99c22381a8f45f9339ed45a4832aea03e6675aecab4d81adca205ce7df0c7162.json  query-c0737252198d94a37310b996c3f0c95290e39aa80d917b743e2c22875260bf89.json  query-c980d86d463cb00c0acd6141ff36a59f7f111724b06dd673d85c0ac628eaf40c.json  query-d6feebf791b3da42c23b45c3db07c3326831fff99aaba341d7c5af562e864175.json  query-dcdc55b1eab09537d2dd3d6a0a690ba4393fa04896374d9f5b21e92e53d9a51a.json  query-dda68e6745282f07e2cd5f67da9f2da2a3ad24c46f5510d9165cfca0773d42aa.json  query-e468092807ce6a22a1115cc9bc4f1eeede6a7394f13378285494c10bbdd0b349.json  query-ef34a0555aada88b383929cafc148207ee42c1fdfc6cf38f47cdb5ecf9d097ed.json  query-eff8c4263bb99c56eb52afac8074e90c3ea76bd70ad160bd23e78d9712597fb5.json  query-faed06372b10d192ca411c3c6dd481b8d5dc8927443e0124b23a71cb998fec11.json
api/migrations/: 000_bootstrap.sql  001_customer.sql  003_entry_log.sql  005_device.sql  007_device_net_id_rename.sql  008_customer_status.sql  009_customer_unique.sql  010_staff_unique.sql  0_bootstrap.sql  1_customer.sql  1_user.sql  2_code.sql  2_staff.sql  3_entry_log.sql  4_entry_log_unique.sql  6_entry_log_device.sql
api/queries/: code_delete.sql  code_insert.sql  code_select.sql  code_update.sql  code_user_select.sql  user_insert.sql  user_select.sql  user_update.sql  users_codes.sql
api/src/: logging.rs  main.rs  mqtt.rs
api/src/domain/: code.rs  customer.rs  device.rs  entry_log.rs  mod.rs  staff.rs  user.rs
api/src/http/: code.rs  code_handler.rs  customer_handler.rs  device_handler.rs  entry_handler.rs  mod.rs  staff_handler.rs  user.rs
cli/: Cargo.toml
cli/src/: main.rs
firmware/: Cargo.toml  build.rs  rust-toolchain.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: buttons.rs  door.rs  main.rs  mqtt.rs  network.rs  user.rs  wiegand.rs
hardware/: .gitignore  Doorsys.kicad_pcb  Doorsys.kicad_prl  Doorsys.kicad_pro  Doorsys.kicad_sch  Doorsys.xml  fp-info-cache  fp-lib-table
protocol/: Cargo.toml
protocol/src/: lib.rs
util/: pre-commit
webapp/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
webapp/config/: default.conf
webapp/src/: App.vue  main.js  router.js
webapp/src/assets/: main.css
webapp/src/components/: BackButton.vue  Navbar.vue  StaffList.vue
webapp/src/router/: index.js
webapp/src/views/: CustomerListView.vue  CustomerView.vue  EntryLogView.vue  StaffView.vue  UserListView.vue  UserView.vue
