[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6.20", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "migrate",
  "macros",
] }
