[package]
name = "doorsys_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["macros", "json"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "migrate",
  "macros",
  "chrono",
] }
tracing-subscriber = "0.3"
tracing = "0.1"
rand = "0.8.5"
