[package]
name = "doorsys-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doorsys-protocol = { path = "../protocol/" }
rumqttc = { version = "0.23", features = ["url"] }
bincode = "2.0.0-rc.3"
chrono = "0.4.27"
