[package]
name = "doorsys-firmware"
version = "0.1.0"
authors = ["Fabio Mendes <fabiojmendes@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = [
  "alloc",
  "esp-idf-sys/std",
  "esp-idf-sys/binstart",
  "embedded-svc?/std",
  "esp-idf-hal?/std",
  "esp-idf-svc?/std",
]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = [
  "embedded-svc?/nightly",
  "esp-idf-svc?/nightly",
] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = [
  "esp-idf-hal?/embassy-sync",
  "esp-idf-hal?/critical-section",
  "esp-idf-hal?/edge-executor",
  "esp-idf-svc?/embassy-time-driver",
  "esp-idf-svc?/embassy-time-isr-queue",
]

[dependencies]
doorsys-protocol = { path = "../protocol" }
anyhow = "1"
bincode = "2.0.0-rc.3"
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }

[build-dependencies]
embuild = "0.31.2"
